// Copyright 2023 The Fleetbench Authors
//
// Licensed under the Apache License, Version 2.0 (the "License" );
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an " AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// WARNING: DO NOT EDIT! This file is auto-generated.
syntax = "proto2";

package fleetbench.rpc.P4.request.Message1;

message Message1 {
  optional string f_0 = 5;
  message M1 {
    optional bool f_0 = 5;
    message M2 {
      optional bytes f_0 = 5;
      optional int64 f_1 = 8;
      optional int32 f_2 = 13;
      optional bytes f_3 = 15;
      optional string f_4 = 19;
      optional int32 f_5 = 21;
      optional string f_6 = 23;
    }
    repeated M2 f_8 = 8;
  }
  optional M1 f_10 = 10;
}
